<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NovelReaderApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">轻国阅读</string>
    <string name="title_activity_novel_index">NovelIndexActivity</string>
    <string name="title_activity_volume">VolumeActivity</string>
    <string name="title_activity_chapter_content">ChapterContentActivity</string>
    <string name="title_activity_search_result">SearchResultActivity</string>
    <string name="title_activity_local_novel">LocalNovelActivity</string>
    <string name="tab_mycabinet">我的收藏</string>
    <string name="tab_animax_novel">动画化小说</string>
    <string name="tab_new_novel">最新小说</string>
    <string name="search_hint">小说名称 | 作者</string>
    <string name="author">作者</string>
    <string name="update_date_time">更新日期</string>
    <string name="view_count">浏览</string>
    <string name="add_to_cabinet">收藏</string>
    <string name="goto_novel_index">小说目录</string>
    <string name="dialog_novel_index">小说目录</string>
    <string name="dialog_delete">删除</string>
    <string name="dialog_cancel">取消</string>
    <string name="toast_add_to_mycabinet">已收藏</string>
    <string name="search_title">搜寻:</string>
    <string name="tab_read_record">阅读纪录</string>
    <string name="tab_downloaded_novel">个人下载</string>
    <string name="tab_downloaded_management">下载管理</string>

    <string-array name="action_array">
        <item>线上阅览</item>
        <item>本地下载</item>
    </string-array>

</resources>